second initial commit

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -147,6 +147,8 @@ h1, h2, h4, h2, h5, h6{
     color: #000;
     text-decoration: line-through;
 }
+
+
 a{
     text-decoration: none;
 }
@@ -587,10 +589,24 @@ ul.breadcrumb2 li a:hover{
     max-width: 95%
 } */
 .detailsContainer .productInfo .priceContainer .priceLarge{
-    font-size: 20px; 
+    font-size: 30px; 
     font-weight: bold;
-    padding: 5px 0px
+    padding: 5px 0px;
+    margin-right: 10px;
 }
+
+.priceContainer .discount{
+    color:yellowgreen
+}
+
+.priceContainer .oldPrice{
+    font-size: 18px;
+    opacity: 0.6;
+    color: #000 !important;
+    font-weight: 600;
+    text-decoration: line-through;
+}
+
 .detailsContainer .productInfo p .readMore{
     font-size: 13px;
     font-weight: bold;
@@ -601,7 +617,7 @@ ul.breadcrumb2 li a:hover{
 
 .productZoom{
     width: 100%;
-    height: auto;
+    height: 650px !important;
     /* border: 1px solid rgba(0,0,0,0.1); */
     padding: 0px;
     overflow: hidden;
@@ -804,22 +820,34 @@ input::-webkit-outer-spin-button{
 .reviewsCard{
     margin-bottom: 20px;
 }
-.reviewsCard .image{
-    width: 100px;
-    margin-right: 20px;
+.reviewsCard .imageBox{
+    display: flex !important;
+    justify-content: center !important;
+    width: 100%;
 }
 .reviewsCard .rounded-circle{
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
+    background-color: #3bb77e;
 }
-.reviewsCard .rounded-circle img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.reviewsCard .rounded-circle .initial{
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+    display: block;
+    text-align: center;
+}
+
+.reviewsCard .leftContainer{
+    width: 30%
+}
+.reviewsCard .rightContainer{
+    width: 70%;
+    padding-left: 15px;
 }
 
 .reviewForm .form-group{
@@ -833,6 +861,24 @@ input::-webkit-outer-spin-button{
 }
 .reviewForm .form-group textarea.form-control {
     height: 130px; padding-top:25px;
+}
+
+.reviewsScroll{
+    max-height: 300px;
+    overflow-y: scroll;
+    margin-bottom: 25px;
+    padding-right: 25px;
+}
+
+.reviewsScroll::-webkit-scrollbar{
+    width: 8px;
+    height: 8px;
+}
+.reviewsScroll::-webkit-scrollbar-thumb{
+    background-color: #ccc;
+}
+.reviewsScroll::-webkit-scrollbar-track{
+    background-color: #f1f1f1;
 }
 
 .progressBarBox .progress{
