--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -726,16 +726,37 @@ table td .productBox .info{
     margin-left: auto;
 }
 
-.table td .subCategory.badge{
-   background-color: blue !important;
+.table td .subCatContainer{
+    display: flex !important;
+    margin-right: 5px
+}
+.table td .subCatContainer .subCategory{
+   /* background-color: blue !important; */
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   position: relative;
    padding: 5px !important;
-   font-size: 13px
+   width: max-content;
+   font-size: 10px
    
 }
-.table td .subCategory.badge svg{
+.table td .subCatContainer  .img{
+  width: 50px
+   
+}
+.table td .subCatContainer .subCategory .deleteIcon{
+  font-size:15px !important;
+  color: rgb(216, 22, 22);
+  position: absolute;
+  top: 0 !important;
+  right: 0
+}
+
+/* .table td .subCategory.badge svg{
     font-size: 15px;
     margin-left: 5px
-}
+} */
 
 .tableFooter p{
     font-size: 14px;
