--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -38,10 +38,10 @@ header .headerSearch{
     width: 100%; 
     /* height: 50px; */
     border: 1px solid #bce3c9;
-    padding-left: 40px;
-    border-radius: 3px;
+    padding-left: 35px;
+    border-radius: 7px;
     overflow: hidden;
-    height: 40px;
+    height: 45px;
     box-shadow: rgba(14, 63, 126, 0.04) 0px 0px 0px 1px, rgba(42, 51, 69, 0.04) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.04) 0px 6px 6px -3px, rgba(14, 63, 126, 0.04) 0px 12px 12px -6px, rgba(14, 63, 126, 0.04) 0px 24px 24px -12px;
 }
 /* header .headerSearch .selectDropdownWrapper{
@@ -314,6 +314,12 @@ header .headerTabs li button .iconText{
     background-color: #ccc;
 }
 
+
+.css-1xomo8h-MuiPaper-root-MuiPopover-paper-MuiMenu-paper {
+    top: 60px !important;
+    width: 15%
+    /* left: 970px !important */
+}
 
 
 
