--- a/client/src/pages/home/slider/index.css
+++ b/client/src/pages/home/slider/index.css
@@ -76,11 +76,11 @@
     position: relative !important;
     display:block;
     /* top: 20px; */
-    left: 50% !important;
-    /* width: 50%; */
+    /* left: 50% !important; */
+    width: 100%;
 
-    height: 400px;
-    border-radius: 25px;
+    height: 450px;
+    /* border-radius: 25px; */
 
 }
 
