--- a/client/src/pages/home/style.css
+++ b/client/src/pages/home/style.css
@@ -78,3 +78,7 @@
     height: 320px !important;
     margin-right: 20px !important
 }
+
+.categories .categoryRow{
+    margin-top: 5px !important
+}
