--- a/client/src/pages/home/style.css
+++ b/client/src/pages/home/style.css
@@ -1,3 +1,14 @@
+:root {
+    --primary-teal: #00a99d;
+    --dark-teal: #00776e;
+    --light-teal: #66e2d6;
+    --golden-yellow: #f2a900;
+    --soft-coral: #ff6f61;
+    --charcoal: #2f2f2f;
+    --light-gray: #f4f4f4;
+    --white: #ffffff;
+}
+
 .homeProducts{
     /* margin-bottom: 200px; */
     /* padding-bottom: 70px; */
@@ -12,13 +23,13 @@
     align-items: center; */
 }
 .homeProducts .container-fluid .wrapper .row{
-    padding: 15px 5px !important
+    padding: 0px 5px !important
 }
 .homeProducts .container-fluid .wrapper .productCardHeader{
     display: flex;
     justify-content: space-between;
     padding: 10px 10px;
-    background-color: goldenrod;
+    background-color: var(--dark-teal);
     color: white
 }
 .homeProducts .container-fluid .wrapper .productCardHeader h3{
@@ -30,14 +41,14 @@
     margin-left: 10px;
 }
 .filterTab li a{
-    color: #000;
+    color: var(--charcoal);
     text-decoration: none;
     font-size: 14px;
     transition: all 0.3s ease-in-out;
     position: relative;
 }
 .filterTab li:hover a{
-    color: #3bb77e !important;
+    color: var(--light-gray) !important;
     transform: translateY(-10px);
     font-weight: 700px;
 }
@@ -79,6 +90,6 @@
     margin-right: 20px !important
 }
 
-.categories .categoryRow{
-    margin-top: 5px !important
+.bannerCol{
+    padding: 18px 15px !important
 }
