--- a/client/src/components/product/product.css
+++ b/client/src/components/product/product.css
@@ -149,7 +149,44 @@
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 50%;
     padding: 5px;
+    color: var(--dark-teal)
+
 }
+
+.product-icons button:hover {
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 50%;
+    padding: 5px;
+}
+
+
+.share-button-container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .share-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+  }
+  
+  .share-options {
+    position: absolute;
+    top: 105%;
+    left: 0;
+    background: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 8px;
+    /* display: flex; */
+    gap: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 100;
+    white-space: nowrap;
+  }
+  
 
 
 
